--- a/app/components/styles.scss
+++ b/app/components/styles.scss
@@ -1,243 +1,255 @@
 // Header
-@import "../variables.scss";
+@import '../variables.scss';
 
 .main-header {
-    position: relative;
-    max-height: 170px;
-    width: 100%;
-    z-index: 100;
-    background: linear-gradient(to bottom, #002143 -37%, #184478);
-    .top-nav {
-      max-height: 130px;
-      margin: 0 auto;
-      display: flex;
-      padding: 1rem;
-      max-width: 1448px;
-      ul {
-        width: 100%;
-        list-style-type: none;
-        display: flex;
-        justify-content: space-between;
-  
-        .links-container {
-          display: flex;
-          width: 50%;
-          justify-content: flex-end;
-          align-items: flex-end;
-          div {
-            width: 100%;
-            max-width: 100px;
-            text-align: center;
-            padding: 0.1rem;
-            border-radius: 0.6rem;
-            &:hover {
-              background-color: #d43900;
-              transition: 0.3s ease-in-out;
-            }
-            .header-link {
-              color: white;
-            }
-          }
-        }
-  
-        .title {
-          display: flex;
-          align-items: center;
-          max-width: 370px;
-          width: 50%;
-          a {
-            width: 80%;
-            display: flex;
-            flex-direction: row;
-            color: whitesmoke;
-            align-items: center;
-            gap: 0.6rem;
-            img {
-              border-radius: 50%;
-              width: 20%;
-              min-width: 40px;
-            }
-            span {
-              font-family: "Pacifico", cursive;
-              min-width: 100px;
-              font-size: 1.2em;
-            }
-          }
-        }
-        .logout-btn {
-          display: flex;
-  
-          .logout-btn__username {
-            font-size: 1.2rem;
-            text-align: center;
-            width: 100%;
-            vertical-align: middle;
-            color: whitesmoke;
-            font-style: italic;
-          }
-          align-items: flex-end;
-          button {
-            width: 110px;
-            font-size: 0.8rem;
-            font-weight: 600;
-            text-decoration: none;
-            border: none;
-            background-color: #fff;
-            color: #00082a;
-            padding: 0.25rem;
-          }
-        }
-      }
-    }
-  
-    .admin-menu {
+  position: relative;
+  max-height: 170px;
+  width: 100%;
+  z-index: 100;
+  background: linear-gradient(to bottom, #002143 -37%, #184478);
+  .top-nav {
+    max-height: 130px;
+    margin: 0 auto;
+    display: flex;
+    padding: 1rem;
+    max-width: 1448px;
+    ul {
+      width: 100%;
+      list-style-type: none;
       display: flex;
       justify-content: space-between;
-      max-width: 1416px;
-      margin: 0 auto;
-      div {
-        width: 100%;
-        max-width: 100px;
-        text-align: center;
-        padding: 0.1rem;
-        border-radius: 0.6rem;
-        &:hover {
-          background-color: #d43900;
-          transition: 0.3s ease-in-out;
-        }
-        .header-link {
-          color: white;
-        }
-      }
-    }
-  }
-  
-  @media (max-width: $breakpoint-mobile) {
-    .main-header {
-      .top-nav {
-        ul {
-          .logout-btn {
-            button {
-              width: 90px;
-            }
-            .log-out {
-              font-size: 0.7rem;
-            }
+
+      .links-container {
+        display: flex;
+        width: 50%;
+        justify-content: flex-end;
+        align-items: flex-end;
+        div {
+          width: 100%;
+          max-width: 100px;
+          text-align: center;
+          padding: 0.1rem;
+          border-radius: 0.6rem;
+          &:hover {
+            background-color: #d43900;
+            transition: 0.3s ease-in-out;
+          }
+          .header-link {
+            color: white;
           }
         }
       }
-      .admin-menu {
+
+      .title {
         display: flex;
-        font-size: 0.8rem;
-        gap: 0.1rem;
-        div {
+        align-items: center;
+        max-width: 370px;
+        width: 50%;
+        a {
+          width: 80%;
+          display: flex;
+          flex-direction: row;
+          color: whitesmoke;
+          align-items: center;
+          gap: 0.6rem;
+          img {
+            border-radius: 50%;
+            width: 20%;
+            min-width: 40px;
+          }
+          span {
+            font-family: 'Pacifico', cursive;
+            min-width: 100px;
+            font-size: 1.2em;
+          }
+        }
+      }
+      .logout-btn {
+        display: flex;
+
+        .logout-btn__username {
+          font-size: 1.2rem;
           text-align: center;
-          padding: 0.1rem;
+          width: 100%;
+          vertical-align: middle;
+          color: whitesmoke;
+          font-style: italic;
+        }
+        align-items: flex-end;
+        button {
+          width: 110px;
+          font-size: 0.8rem;
+          font-weight: 600;
+          text-decoration: none;
+          border: none;
+          background-color: #fff;
+          color: #00082a;
+          padding: 0.25rem;
         }
       }
     }
   }
-  
-  @media (min-width: $breakpoint-pc) {
-    ul {
-      .title {
-        font-size: 2rem;
+
+  .admin-menu {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1416px;
+    margin: 0 auto;
+    div {
+      width: 100%;
+      max-width: 100px;
+      text-align: center;
+      padding: 0.1rem;
+      border-radius: 0.6rem;
+      &:hover {
+        background-color: #d43900;
+        transition: 0.3s ease-in-out;
+      }
+      .header-link {
+        color: white;
       }
     }
-  } ;
-  
+  }
+}
+
+@media (max-width: $breakpoint-mobile) {
+  .main-header {
+    .top-nav {
+      ul {
+        .logout-btn {
+          button {
+            width: 90px;
+          }
+          .log-out {
+            font-size: 0.7rem;
+          }
+        }
+      }
+    }
+    .admin-menu {
+      display: flex;
+      font-size: 0.8rem;
+      gap: 0.1rem;
+      div {
+        text-align: center;
+        padding: 0.1rem;
+      }
+    }
+  }
+}
+
+@media (min-width: $breakpoint-pc) {
+  ul {
+    .title {
+      font-size: 2rem;
+    }
+  }
+}
 
 //  Navbar
 
 .nav-container {
-    background-color: white;
-    border-bottom: 1px solid #e4e4e4;
-    position: relative;
-    z-index: 10;
+  background-color: white;
+  border-bottom: 1px solid #e4e4e4;
+  position: relative;
+  z-index: 10;
+  // width: 100%;
+  // display: block;
+  .bottom-nav {
+    padding: 0.5rem 1.5rem;
+    margin: 0 auto;
+    max-width: 1448px;
     // width: 100%;
-    // display: block;
-    .bottom-nav {
-      padding: 0.5rem 1.5rem;
+    .bottom-nav__ul {
+      display: flex;
+      justify-content: space-between;
       margin: 0 auto;
-      max-width: 1448px;
+      // flex-direction: row;
       // width: 100%;
-      .bottom-nav__ul {
-        display: flex;
-        justify-content: space-between;
-        margin: 0 auto;
-        // flex-direction: row;
-        // width: 100%;
-        li {
-          list-style-type: none;
-          font-size: 1.4rem;
-        }
-        .fa-bars {
-          &:hover {
-            cursor: pointer;
-          }
-        }
-        .fa-cart {
-          margin-right: 1rem;
-          color: black;
-          a {
-            color: black;
-          }
-        }
-        .user-icon {
-          padding: 0 0.2rem;
-          font-weight: 600;
+      li {
+        list-style-type: none;
+        font-size: 1.4rem;
+      }
+      .fa-bars {
+        &:hover {
           cursor: pointer;
         }
-        .search-box {
-          padding: 0 1rem;
-          width: 85%;
+      }
+      .fa-cart {
+        margin-right: 1rem;
+        color: black;
+        a {
+          color: black;
+        }
+      }
+      .user-icon {
+        padding: 0 0.2rem;
+        font-weight: 600;
+        cursor: pointer;
+      }
+      .search-box {
+        padding: 0 1rem;
+        width: 85%;
+        display: flex;
+        .searchBar {
+          border: 1px solid black;
           display: flex;
-          .searchBar {
-            border: 1px solid black;
-            display: flex;
+          width: 100%;
+
+          input {
             width: 100%;
-  
-            input {
-              width: 100%;
-              border: none;
-            }
-            button {
-              background-color: white;
-              border: none;
-              font-size: 1rem;
-              padding: 0.4rem 0.5rem;
-              margin-left: 0.5rem;
-              &:hover {
-                background-color: black;
-                color: white;
-                transition: 0.5s ease-in-out;
-              }
+            border: none;
+          }
+          button {
+            background-color: white;
+            border: none;
+            font-size: 1rem;
+            padding: 0.4rem 0.5rem;
+            margin-left: 0.5rem;
+            &:hover {
+              background-color: black;
+              color: white;
+              transition: 0.5s ease-in-out;
             }
           }
         }
       }
     }
   }
-  
-  // .show-sidebar {
-  //   transform: translateX(-250px);
-  // }
-  
-  @media (min-width: 1650px) {
-    .nav-container {
-      .bottom-nav {
-        .bottom-nav__ul {
-          .fa-bars {
-            display: none;
-          }
-          .search-box {
-            width: 92%;
-          }
+}
+
+// .show-sidebar {
+//   transform: translateX(-250px);
+// }
+
+@media (min-width: 1650px) {
+  .nav-container {
+    .bottom-nav {
+      .bottom-nav__ul {
+        .fa-bars {
+          display: none;
+        }
+        .search-box {
+          width: 92%;
         }
       }
     }
   }
-  
+}
+
+// Footer
+footer {
+  position: absolute;
+  z-index: 15;
+  bottom: -155px;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background: linear-gradient(to bottom, #002143 -37%, #184478);
+}
 
 //   Search Bar
 // .search-box {
