--- a/client/src/pages/ProductDetails/DisplayProductDetails.scss
+++ b/client/src/pages/ProductDetails/DisplayProductDetails.scss
@@ -1,34 +1,34 @@
-@// import "../../variables.scss";
+// // @import "../../variables.scss";
+// //Need to Confirm: why carousel related styles are here??
+// .carousel-root {
+//   // width: 90%;
+//   margin: 0 auto;
 
-.carousel-root {
-  // width: 90%;
-  margin: 0 auto;
+//   .slider-wrapper {
+//     .slider {
+//       div {
+//         margin: 0 auto;
+//         img {
+//           height: 600px;
+//         }
+//       }
+//     }
+//     .thumb {
+//       img {
+//         height: 120px;
+//       }
+//     }
+//   }
+// }
 
-  .slider-wrapper {
-    .slider {
-      div {
-        margin: 0 auto;
-        img {
-          height: 600px;
-        }
-      }
-    }
-    .thumb {
-      img {
-        height: 120px;
-      }
-    }
-  }
-}
+// @media (min-width: $breakpoint-tablet) {
+//   .carousel-root {
+//     width: 60%;
+//   }
+// }
 
-@media (min-width: $breakpoint-tablet) {
-  .carousel-root {
-    width: 60%;
-  }
-}
-
-@media (min-width: $breakpoint-tablet) {
-  .carousel-root {
-    width: 50%;
-  }
-}
+// @media (min-width: $breakpoint-tablet) {
+//   .carousel-root {
+//     width: 50%;
+//   }
+// }
