all product display(wip)

--- a/app/global.scss
+++ b/app/global.scss
@@ -8,14 +8,30 @@
     text-decoration: none;
   }
   
+//   html {
+//     min-height: 100vh;
+//   }
+
   html {
-    min-height: 100vh;
-  }
-  
-  body {
     height: 100%;
+    // margin: 0;
   }
   
+//   body {
+//     height: 100%;
+//   }
+  
+.flex-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+
+    #root{
+        flex:1;
+        position: relative;
+    }
+}
+
   .App {
     height: 100%;
     position: relative;
