product details page done

--- a/app/products/products.module.scss
+++ b/app/products/products.module.scss
@@ -1,3 +1,5 @@
+ @import "../variables.scss";
+
 #display-product {
     margin: 0 auto;
     display: flex;
@@ -7,3 +9,116 @@
     gap: 1rem;
     //   background-color: black;
   }
+
+
+// product details page
+.product-container {
+    width: 100%;
+    margin: 0 auto;
+    .product__display {
+      width: 90%;
+      margin: 0 auto;
+      .detail__img {
+        width: 100%;
+        max-width: 650px;
+        margin-bottom: 1rem;
+        img {
+          width: 100%;
+          max-height: 450px;
+        }
+      }
+      .detail__info {
+        h3 {
+          border-bottom: 1px solid black;
+          border-top: 1px solid black;
+          padding: 0.5rem;
+          font-size: 1.5rem;
+        }
+        display: flex;
+        flex-direction: column;
+      }
+  
+      .spec {
+        margin: 2rem 0;
+  
+        tbody {
+          tr {
+            font-size: 1.25rem;
+            width: 100%;
+  
+            th {
+              border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+              text-align: left;
+              width: 150px;
+              padding: 0.8rem 0;
+              color: rgba(0, 0, 0, 0.6);
+            }
+            td {
+              border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+            }
+          }
+        }
+      }
+    }
+  }
+  
+  @media (min-width: $breakpoint-tablet) {
+    .product-container {
+
+        .product__display {
+        display: flex;
+        justify-content: space-evenly;
+        .detail__img {
+          width: 10%;
+        }
+        .detail__info {
+          width: 40%;
+        }
+      }
+    }
+  }
+  
+  @media (min-width: $breakpoint-pc) {
+    .product-container {
+      width: 65%;
+    }
+  }
+  
+
+  .carousel-container{
+    width: 50%
+  }
+
+// .carousel-root {
+//     width: 90%;
+//     margin: 0 auto;
+  
+//     .slider-wrapper {
+//       .slider {
+//         div {
+//           margin: 0 auto;
+//           img {
+//             height: 600px;
+//           }
+//         }
+//       }
+//       .thumb {
+//         img {
+//           height: 120px;
+//         }
+//       }
+//     }
+//   }
+  
+//   @media (min-width: $breakpoint-tablet) {
+//     .carousel-root {
+//       width: 60%;
+//     }
+//   }
+  
+//   @media (min-width: $breakpoint-tablet) {
+//     .carousel-root {
+//       width: 50%;
+//     }
+//   }
+  
