finished products/ need to work on my page

--- a/app/(home)/styles.scss
+++ b/app/(home)/styles.scss
@@ -51,7 +51,7 @@
         justify-content: space-between;
         // flex-direction: column;
       }
-      li {
+      a {
         width: 100%;
         list-style-type: none;
         img {
