--- a/app/cart/cart.module.scss
+++ b/app/cart/cart.module.scss
@@ -27,16 +27,16 @@
             width: 100%;
           }
         }
-        .cart__description {
-          width: 100%;
-          display: flex;
-          flex-direction: column;
-          input {
-            width: 40px;
-            // height: 30px;
-            font-size: 1.1rem;
-          }
-        }
+        // .cart__description {
+        //   width: 100%;
+        //   display: flex;
+        //   flex-direction: column;
+        //   input {
+        //     width: 40px;
+        //     // height: 30px;
+        //     font-size: 1.1rem;
+        //   }
+        // }
       }
     }
   
